fix page overflow

--- a/src/style.css
+++ b/src/style.css
@@ -33,7 +33,7 @@ nav ul{
     position: absolute;
     width: calc(33% - var(--br) / 2);
     height: 100%;
-    backdrop-filter: invert(90%);
+    backdrop-filter: invert(100%);
     -webkit-backdrop-filter: invert(100%);
     border-left: 5px solid var(--theme);
     border-right: 5px solid var(--theme);
@@ -67,29 +67,23 @@ li:hover{
 .home, .menu, .about{
     background-color: white;
     display: none;
+    padding: 30px;
 }
 
-.home.showpage {
+.home.showpage, .about.showpage{
+    flex: 1 1 0;
     background-image: url(./assets/coffeeshop.jpg);
     background-size: cover;
     background-position: center;
+    background-attachment: fixed;
     color: white;
-
     display: flex;
     align-items: center;
     justify-content: center;
-    
-    position: absolute;
-    top:0px;
-    bottom:0px;
-    right:0px;
-    left:0px;
-    z-index: -1;
-
     text-align: center;
 }
 
-.home>div{
+.home>div, .about>div{
     padding: 30px;
     backdrop-filter: blur(10px) brightness(50%);
     border-radius: 5px;
